<resources>

    <string name="nameEmpresa">Mamore Transportes</string>

    <string name="app_name">Controle na Mão</string>
    <string name="abas">Faturamento</string>
    <string name="aba1">Crédito</string>
    <string name="aba2">Débito</string>

    <string name="home_fragment">Home Fragment</string>
    <string name="sport_fragment">Sport Fragment</string>
    <string name="movie_fragment">Movie Fragment</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!--CAMPO DATA-->
    <string name="campoData">dd/mm/yyyy</string>
    <string name="data">Data</string>

    <!--CAMPO TEXTO-->
    <string name="escreva">Escreva aqui</string>

    <!--INSERIR-->
    <string name="inserir">INSERIR</string>

    <string name="inserirGasto">INSERIR NOVO TIPO DE GASTO</string>
    <string name="inserirServico">Serviço/Componente</string>

    <string name="inserirFrete">INSERIR NOVO TIPO DE FRETE</string>
    <string name="inserirTipoFrete">Frete (Ex: Graneleiro, mudança, etc)</string>
    <string name="frete">Frete</string>

    <string name="inserirNovoCredito">INSERIR NOVO CRÉDITO</string>
    <string name="inserirCredito">Insira o valor do Crédito</string>

    <string name="debito">INSERIR NOVO DÉBITO</string>

    <string name="valor">Valor</string>

    <string name="inserirVeiculo">INSERIR NOVO VEÍCULO</string>
    <string name="inserirTipoVeiculo">Veiculo(Placa)</string>
    <string name="veiculo">Veiculo (Placa)</string>

    <string name="dataInicial">Data Inicial</string>
    <string name="dataFinal">Data Final</string>

    <string name="movimentacao">Movimentação</string>

    <string name="btFiltro">Botão para acessar filtros</string>

    <!--DESATIVAR ITEM-->
    <string name="desativar">Desativar</string>

    <!--EXCLUIR ITEM-->
    <string name="excluir">Excluir</string>

    <!--VOLTAR HOME-->
    <string name="voltar">Voltar</string>

    <!--SOBRE NOS-->
    <string name="aboutPt1">Nós somos uma empresa formada atualmente por 4 funcionarios (3 motoristas e 1 auxiliar administrativo) e 2 sócios
    </string>

    <string name="aboutPt2">Criada em 2008 por Osvaldo de Oliveira e Eliana de Fátima Buzin, visávamos apenas o transporte de mercadorias como autonomos, e hoje, alguns anos depois temos uma determinada importância no transporte de suinos
    </string>

    <string name="aboutPt3">Temos valores baseados na confiança e dedicação, onde todos os motoristas são comissionados e recebem de acordo com seu compromisso com o trabalho
    </string>

    <string name="aboutPt4">Nosso objetivo de futuro é dar a devida oportunidade para as pessoas sempre tratando elas com respeito e cordialidade até mesmo pois sabemos a vivência da profissão
    </string>
    <string name="servicoComponente">Serviço/Componente</string>
    <string name="inserirDebito">Insira o valor do Débito</string>
    <string name="contato">Contato (45) 9 9853-3768</string>
    <string name="buscar">buscar</string>
    <string name="filtre_o_seu_faturamento">Filtre o seu Faturamento</string>


</resources>