<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.controlenamao.DebitFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/debito" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:text="@string/veiculo" />

        <Spinner
            android:id="@+id/spVeiculosDebit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:text="@string/servicoComponente" />

        <Spinner
            android:id="@+id/spGastos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:text="@string/data" />

        <EditText
            android:id="@+id/edDataDebito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="date"
            android:hint="@string/campoData"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:text="@string/valor" />

        <EditText
            android:id="@+id/edValorDebito"
            android:digits="0123456789 ."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="value"
            android:hint="@string/inserirDebito"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/btCadastroDebito"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Page"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/inserir" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/lvDebito"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

<!--            <Button-->
<!--                android:id="@+id/btExcluirDebito"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:backgroundTint="@color/Negacao"-->
<!--                android:textColor="@color/white"-->
<!--                android:layout_margin="10dp"-->
<!--                android:text="@string/excluir"/>-->

            <Button
                android:id="@+id/btHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/Afirmacao"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:text="@string/voltar"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>