<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FreightFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/inserirFrete" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:text="@string/inserirTipoFrete" />

        <EditText
            android:id="@+id/edFreight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/escreva"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ç"
            android:inputType="textCapSentences|textAutoCorrect"
            android:minHeight="48dp"
            android:textColorHint="@color/Hint" />

        <Button
            android:id="@+id/btCadastroFrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/Page"
            android:textColor="@color/white"
            android:text="@string/inserir" />

<!--        <ScrollView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="vertical">-->

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/lvFrete"/>

<!--            </LinearLayout>-->

<!--        </ScrollView>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

<!--            <Button-->
<!--                android:id="@+id/btDesativarFrete"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="10dp"-->
<!--                android:layout_weight="1"-->
<!--                android:backgroundTint="@color/Negacao"-->
<!--                android:text="@string/excluir"-->
<!--                android:textColor="@color/white" />-->

            <Button
                android:id="@+id/btHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/Afirmacao"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:text="@string/voltar"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>